--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,8 @@ jobs:
       run: |
         sed -i -e '/google-services/d; /firebase/d' build.gradle
         sed -i -e '/google-services/d; /firebase/d' app/build.gradle
-        sed -i -e '116,118d' app/src/main/java/ceui/lisa/activities/Shaft.java
-        sed -i -e '773,782d' app/src/main/java/ceui/lisa/fragments/FragmentSettings.java
+        sed -i -e '/FirebaseAnalytics.getInstance/,+3d' app/src/main/java/ceui/lisa/activities/Shaft.java
+        sed -i -e '/baseBind.isFirebaseEnable.setChecked/,+9d' app/src/main/java/ceui/lisa/fragments/FragmentSettings.java
         sed -i -e '/firebase/d' app/src/main/java/ceui/lisa/activities/Shaft.java app/src/main/java/ceui/lisa/fragments/FragmentSettings.java 
     - name: Build with Gradle
       run: |
