--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,3 +19,5 @@ jobs:
         upstream_repository: CeuiLiSA/Pixiv-Shaft
         upstream_branch: master
         target_branch: master
+        git_user: github-actions
+        git_email: github-actions@github.com
