--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,3 +21,5 @@ jobs:
         target_branch: master
         git_user: github-actions
         git_email: github-actions@github.com
+        git_pull_rebase_config: false
+        git_pull_args: '--unshallow'
