--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+         java-version: 11
     - name: prebuilt
       run: |
         sed -i -e '/google-services/d; /firebase/d' build.gradle
