--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,7 @@
 name: Android build CI
 
 on: 
-  push:
-    branches:
-      - master
+  workflow_dispatch:
   schedule:
     - cron: '0 1 * * *'
 
